netwroking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: datastore-ing
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: a959f2ee7e94441c3bf98521b6df3d34-246106715.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datastore-frontend-svc
                port:
                  number: 8081
